--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>team choose</title>
+	<title>games</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,700italic,700,300italic&subset=latin,latin-ext'>
@@ -175,11 +175,13 @@
 				</ul>
 			</div>
 			<div class="row middle-row">
-				<p class="text-uppercase text-center">check in</p>
+				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info">100 $</p>
+				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1 text-uppercase text-center">check in</p>
+				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info">00:00:01</p>
 			</div>
 			<div class="row bottom-row">
 				<nav class="col-xs-12 col-sm-1 text-center profile-menu">
-					<img src="images/cup-white.png">
+					<img src="images/cup-menu.png">
 					<a href="index.html" class="active">
 						<img src="images/info.png">
 					</a>
@@ -222,7 +224,7 @@
 								<li>
 									<p class="col-xs-12 online-player">
 										<img src="images/team.png" alt="team">
-										Devil23 	
+										<a href="#">Devil23</a> 	
 									</p>
 								</li>
 								<li>
@@ -256,7 +258,7 @@
 								<li>
 									<p class="col-xs-12 online-player">
 										<img src="images/team.png" alt="team">
-										Crazy_Joe
+										<a href="#">Crazy_Joe</a> 
 									</p>
 									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
 									<span class="col-xs-2">16:52</span>
@@ -271,7 +273,7 @@
 								<li>
 									<p class="col-xs-12 online-player">
 										<img src="images/team.png" alt="team">
-										Devil23 	
+										<a href="#">Devil23</a>  	
 									</p>
 								</li>
 								<li>
@@ -305,7 +307,7 @@
 								<li>
 									<p class="col-xs-12 online-player">
 										<img src="images/team.png" alt="team">
-										Crazy_Joe 
+										<a href="#">Crazy_Joe</a>  
 									</p>
 									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
 									<span class="col-xs-2">16:52</span>
@@ -317,7 +319,7 @@
 							</ul>
 						</div>
 						<form name="chat-message" id="chatMessage" class="new-message">
-							<textarea name="user-message" form="chatMessage" class="col-xs-12"></textarea>
+							<textarea name="user-message" form="chatMessage" class="col-xs-12" placeholder="Write a comment..."></textarea>
 							<input type="submit" name="submit-message" value="send" class="col-xs-4 col-sm-5 text-center">
 						</form>
 					</div>
