--- a/ladder.html
+++ b/ladder.html
@@ -22,129 +22,129 @@
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr class="winner">
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 				</div>
 				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Quater-finals</p>
@@ -153,65 +153,65 @@
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr class="winner">
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 				</div>
 				<p class="col-xs-12 col-sm-7 col-lg-3 text-center">Semi-finals</p>
@@ -220,33 +220,33 @@
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr>
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td><a href="#">Team A</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 					<div class="ladder-box">
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr class="winner">
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 				</div>
 				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Final</p>
@@ -255,17 +255,17 @@
 						<a href="team_card.html">
 							<div class="border-menu">
 							</div>
-							<table>
-								<tr>
-									<td>Team A</td>
-									<td></td>
-								</tr>
-								<tr class="winner">
-									<td>Team B</td>
-									<td></td>
-								</tr>
-							</table>
 						</a>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td><a href="#">Team B</a></td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
 				</div>
 			</div>
