--- a/support.html
+++ b/support.html
@@ -27,17 +27,17 @@
 								Choose your topic to precise your ticket<img src="images/enter-topic.png" alt="enter-topic">
 							</li>
 							<li class="col-xs-12 col-sm-10 topic-list text-center">
-								<input type="radio" name="topic-1" id="topic1"/>game
+								<input type="radio" name="topic-1" id="topic1"/>Game
 							</li>
 							<li class="col-xs-12 col-sm-10 topic-list text-center">
-								<input type="radio" name="topic-2" id="topic2"/>player
+								<input type="radio" name="topic-2" id="topic2"/>Player
 							</li>
 							<li class="col-xs-12 col-sm-10 topic-list text-center">
-								<input type="radio" name="topic-3" id="topic3"/>tuornamnet	
+								<input type="radio" name="topic-3" id="topic3"/>Tournament	
 							</li>
 						</ul>
 						<div class="col-xs-12 text-holder">
-							<textarea name="user-message" form="support" class="col-xs-12" placeholder="write here..."></textarea>
+							<textarea name="user-message" form="support" class="col-xs-12" placeholder="Write here..."></textarea>
 							<input type="submit" name="submit-message" value="send" class="col-xs-3 text-center">
 						</div>
 					</form>
