--- a/team_card.html
+++ b/team_card.html
@@ -30,7 +30,7 @@
 						<p class="col-xs-12 text-center">Team Glorious</p>
 					</div>
 					<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
-					<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
+					<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box online">
 						<div class="progress game-box-bar">
 							<span class="badge">60%</span>
 							<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%"></div>
@@ -89,7 +89,7 @@
 				</form>
 				<div class="col-xs-12 bottom-inner-wrapper">
 					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6">
+						<div class="col-sm-6 online">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 							</div>
@@ -103,7 +103,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6 players-right">
+						<div class="col-sm-6 players-right online">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 							</div>
