--- a/ladder.html
+++ b/ladder.html
@@ -137,7 +137,7 @@
 						</a>
 						<table>
 							<tr>
-								<td>Team A</td>
+								<td><a href="#">Team A</a></td>
 								<td></td>
 							</tr>
 							<tr class="winner">
@@ -204,7 +204,7 @@
 						</a>
 						<table>
 							<tr>
-								<td>Team A</td>
+								<td><a href="#">Team A</a></td>
 								<td></td>
 							</tr>
 							<tr class="winner">
@@ -239,7 +239,7 @@
 						</a>
 						<table>
 							<tr>
-								<td>Team A</td>
+								<td><a href="#">Team A</a></td>
 								<td></td>
 							</tr>
 							<tr class="winner">
@@ -258,7 +258,7 @@
 						</a>
 						<table>
 							<tr>
-								<td>Team A</td>
+								<td><a href="#">Team A</a></td>
 								<td></td>
 							</tr>
 							<tr class="winner">
