suport new list, team hovers

--- a/team_card.html
+++ b/team_card.html
@@ -29,7 +29,7 @@
 						</div>
 						<p class="col-xs-12 text-center">Team Glorious</p>
 					</div>
-					<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
+					<div class="col-xs-12 col-sm-2 col-md-3 versus"><span>vs.</span></div>
 					<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
 						<div class="progress game-box-bar">
 							<span class="badge">60%</span>
@@ -92,84 +92,84 @@
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
 						</div>
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
-						</div>
-					</div>
-					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6 players-right">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-							</div>
-							<p class="text-center">Player</p>
-						</div>
-						<div class="col-sm-6 players-right">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-							</div>
-							<p class="text-center">Player</p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-lg-6 players-wrapper">
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
 						</div>
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
-						</div>
-					</div>
-					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6 players-right">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-							</div>
-							<p class="text-center">Player</p>
-						</div>
-						<div class="col-sm-6 players-right">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-							</div>
-							<p class="text-center">Player</p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-lg-6 players-wrapper">
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
 						</div>
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6 players-right">
+						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
 						</div>
-						<div class="col-sm-6 players-right">
+						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
 							</div>
-							<p class="text-center">Player</p>
+						</div>
+					</div>
+					<div class="col-xs-12 col-lg-6 players-wrapper">
+						<div class="col-sm-6">
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-lg-6 players-wrapper">
+						<div class="col-sm-6">
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
+							</div>
 						</div>
 					</div>
 				</div>
