--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 				</ul>
 			</div>
 			<div class="row middle-row">
-				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info">100 $</p>
+				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></p>
 				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1 text-uppercase text-center">check in</p>
-				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info">00:00:01</p>
+				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></p>
 			</div>
 			<div class="row bottom-row">
 				<nav class="col-xs-12 col-sm-1 text-center profile-menu">
@@ -216,7 +216,7 @@
 					<p>Battlefield Hardline 2v2 Opening Cup #1</p>
 				</div>
 				<div class="col-xs-12 col-sm-4 game-chat">
-					<div class="col-xs-12">
+					<div class="col-xs-12 game-chat-inner-wrapper">
 						<h5 class="text-center">Chat: 37854462</h5>
 						<div class="game-chat-inner">							
 							<h6 class="text-center">20.11.2015</h6>
