--- a/support.html
+++ b/support.html
@@ -37,7 +37,7 @@
 							</li>
 						</ul>
 						<div class="col-xs-12 text-holder">
-							<textarea name="user-message" form="support" class="col-xs-12" placeholder="Write here..."></textarea>
+							<textarea name="user-message" form="support" class="col-xs-12" placeholder="Write a message..."></textarea>
 							<input type="submit" name="submit-message" value="send" class="col-xs-3 text-center">
 						</div>
 					</form>
