red hovers, form fix

--- a/team_card.html
+++ b/team_card.html
@@ -18,7 +18,7 @@
 				<p class="col-xs-12 col-sm-6 text-center">Date: 23 Aug 2015, 16:45</p>	
 			</div>
 			<div class="col-xs-12 col-sm-7 bottom-main">
-				<div class="col-xs-12 bottom-inner-wrapper">
+				<div class="col-xs-12 bottom-inner-wrapper left-buffer">
 					<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
 						<div class="progress game-box-bar">
 							<span class="badge">70%</span>
@@ -41,7 +41,7 @@
 						<p class="col-xs-12 text-center">Team Glorious</p>
 					</div>
 				</div>
-				<form class="col-xs-12 bottom-inner-wrapper result" name="result">
+				<form class="col-xs-12 bottom-inner-wrapper result left-buffer" name="result">
 					<p class="col-xs-3 col-sm-3 col-md-offset-1">enter result</p>
 					<div class="col-xs-1 col-sm-2 result-wrapper left-input">
 						<ul class="result-inner-wrapper">
@@ -85,7 +85,7 @@
 						<input type="button" value="upload media" class="col-xs-11 text-center"/>
 						<input type="submit" value="send" class="col-xs-11 text-center"/>
 					</div>
-					<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
+					<div class="col-xs-12 col-sm-4 col-sm-offset-8 report"><p>report match</p></div>
 				</form>
 				<div class="col-xs-12 bottom-inner-wrapper">
 					<div class="col-xs-12 col-lg-6 players-wrapper">
