new team input, rating height

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 									</li>
 								</ul>
 							</div>
-							<div class="col-xs-12">
+							<div class="col-xs-12 disabled">
 								<img src="images/teams-white.png">
-								<input type="button" id="createNewTeam" value="Create a new team">
+								<input type="text" id="createNewTeam" placeholder="Create a new team">
 							</div>
 							<input type="submit" name="choose-team-accept" value="accept" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
 						</form>
