upload media button

--- a/team_card.html
+++ b/team_card.html
@@ -20,7 +20,7 @@
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus aperiam qui aut, expedita modi. Voluptas ut quaerat, nesciunt neque dolore facilis quo nulla impedit recusandae error aliquam perferendis commodi.
 						</div>
 						<form name="report" id="report" class="col-xs-12 topic-wrapper">
-							<ul class="col-xs-12 col-sm-10 topic-inner-wrapper">
+							<ul class="col-xs-12 col-sm-8 topic-inner-wrapper">
 								<li class="col-xs-12 col-sm-10 enter-topic text-center">
 									Choose your topic to precise your ticket<img src="images/enter-topic.png" alt="enter-topic">
 								</li>
@@ -34,6 +34,7 @@
 									<input type="radio" name="topic-3" id="topic3"/>Tournament	
 								</li>
 							</ul>
+							<button class="col-xs-12 col-sm-3 col-sm-offset-1">upload media</button>
 							<div class="col-xs-12 text-holder">
 								<textarea name="user-message" form="report" class="col-xs-12" placeholder="Write here..."></textarea>
 								<input type="submit" name="submit-message" value="send" class="col-xs-3 text-center">
