profile style no conflict

--- a/index.html
+++ b/index.html
@@ -172,12 +172,11 @@
 					<h2 class="col-xs-12 text-center text-uppercase">choose or create a new team</h2>
 					<div class="col-xs-12">
 						<form name="choose-team" id="chooseTeamForm" class="col-xs-12">
-							<!-- to disable add class "disabled" to div, and a-->
 							<div class="col-xs-12 dropdown">
 								<img src="images/teams-white.png">
 								<a href="#" data-toggle="dropdown" data-target="#">
-									<input type="button" id="chooseTeam" value="Choose team">
-									<img src="images/enter-topic.png" alt="enter-topic">
+									<input type="button" id="chooseTeam" value="Choose team" class="form-click">
+									<img src="images/enter-topic.png" alt="enter-topic" class="form-click">
 								</a>
 								<ul class="dropdown-menu col-xs-12 teams-to-choose">
 									<li class="team-list text-center">
@@ -191,7 +190,7 @@
 							</div>
 							<div class="col-xs-12 disabled">
 								<img src="images/teams-white.png">
-								<input type="text" id="createNewTeam" placeholder="Create a new team">
+								<input type="text" id="createNewTeam" placeholder="Create a new team" class="form-click">
 							</div>
 							<input type="submit" name="choose-team-accept" value="accept" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
 						</form>
@@ -262,13 +261,13 @@
 					</li>
 				</ul>
 			</div>
-			<div class="row middle-row">
+			<div class="row middle-row-games">
 				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></p>
 				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1 text-uppercase text-center">check in</p>
 				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></p>
 			</div>
 			<div class="row bottom-row">
-				<nav class="col-xs-12 col-sm-1 text-center profile-menu">
+				<nav class="col-xs-12 col-sm-1 text-center games-menu">
 					<img src="images/cup-menu.png">
 					<a href="index.html" class="active">
 						<img src="images/info.png">
